// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic render 1`] = `
<form>
  <label>
    Lorem
    <input
      name="lorem"
      readonly=""
      type="text"
      value="ipsum"
    />
  </label>
</form>
`;

exports[`basic validation 1`] = `
Object {
  "errors": Object {
    "lorem": "required",
  },
  "isSubmitting": false,
  "isUpdating": false,
  "isValid": false,
  "isValidating": false,
  "refValues": null,
  "submitCount": 0,
  "touched": Object {
    "lorem": true,
  },
  "values": Object {
    "lorem": "",
  },
}
`;

exports[`initial props 1`] = `
Object {
  "children": [Function],
  "initialValues": Object {
    "lorem": "ipsum",
  },
  "onReset": [Function],
  "onSubmit": [Function],
  "resetRefValues": true,
  "validate": [Function],
  "validateOnmount": false,
}
`;

exports[`initial state 1`] = `
Object {
  "errors": Object {},
  "isSubmitting": false,
  "isUpdating": false,
  "isValid": null,
  "isValidating": false,
  "refValues": Object {
    "lorem": "ipsum",
  },
  "submitCount": 0,
  "touched": Object {},
  "values": Object {
    "lorem": "ipsum",
  },
}
`;

exports[`multiple custom events 1`] = `
Object {
  "errors": Object {},
  "isSubmitting": false,
  "isUpdating": false,
  "isValid": true,
  "isValidating": false,
  "refValues": null,
  "submitCount": 0,
  "touched": Object {
    "dolor": true,
    "lorem": true,
  },
  "values": Object {
    "dolor": "sit",
    "lorem": "woot again",
  },
}
`;

exports[`not mutated 1`] = `
Object {
  "errors": Object {},
  "isSubmitting": false,
  "isUpdating": false,
  "isValid": true,
  "isValidating": false,
  "refValues": null,
  "submitCount": 0,
  "touched": Object {},
  "values": Object {
    "lorem": "ipsum",
  },
}
`;

exports[`onevent 1`] = `
Object {
  "errors": Object {},
  "isSubmitting": false,
  "isUpdating": false,
  "isValid": true,
  "isValidating": false,
  "refValues": null,
  "submitCount": 0,
  "touched": Object {
    "lorem": true,
  },
  "values": Object {
    "lorem": "dolor",
  },
}
`;

exports[`onsubmit 1`] = `
Object {
  "errors": Object {},
  "isSubmitting": false,
  "isUpdating": false,
  "isValid": true,
  "isValidating": false,
  "refValues": null,
  "submitCount": 1,
  "touched": Object {},
  "values": Object {
    "lorem": "dolor",
  },
}
`;

exports[`single custom event 1`] = `
Object {
  "errors": Object {},
  "isSubmitting": false,
  "isUpdating": false,
  "isValid": true,
  "isValidating": false,
  "refValues": null,
  "submitCount": 0,
  "touched": Object {
    "lorem": true,
  },
  "values": Object {
    "dolor": "",
    "lorem": "woot",
  },
}
`;
